[tool.poetry]
name = "earthaccess"
version = "0.10.0"
repository = "https://github.com/nsidc/earthaccess"
documentation = "https://earthaccess.readthedocs.io"
description = "Client library for NASA Earthdata APIs"
authors = ["earthaccess contributors"]
maintainers = [
    "Luis Lopez <betolin@gmail.com>",
    "Joseph H. Kennedy <jhkennedy@alaska.edu>",
    "James Bourbeau <james@coiled.io>",
    "Matt Fisher <mfisher87@gmail.com>",
    "Chuck Daniels <chuck@developmentseed.org>"
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Framework :: IPython",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.9"

# NOTE: Minimum dependencies are tested with the packages defined in the
# `ci/environment-mindeps.yaml` conda environment. When updating minimum dependencies
# here, make sure to also update `ci/environment-mindeps.yaml`.
dependencies = [
  "python-cmr >=0.10.0",
  "pqdm >=0.1",
  "requests >=2.26",
  "s3fs >=2022.11",
  "fsspec >=2022.11",
  "tinynetrc ^1.3.1",
  "multimethod >=1.8",
  "importlib-resources >=6.3.2",
  "typing_extensions >=4.10.0",
  "numpy >=1.24.0;python<3.12",
  "numpy >=1.26.0;python>=3.12",
]

## Optional dependencies; can be opted-in with extra specifications below
## This is so verbose because Poetry requires it: https://python-poetry.org/docs/pyproject#extras
## If we switch to PEP621 specification, we can specify extras (called
## "optional" under PEP621) with versions in one line:
#https://peps.python.org/pep-0621/#example
# kerchunk requires numpy, but numpy >=1.26.0 is required for Python 3.12 support
[project.optional-dependencies]
kerchunk = [
  "kerchunk >=2022.1.0",
  "dask >=0.1.2",
]
dev = [
  "bump-my-version >=0.10.0",
  "pre-commit >=2.4",
  "ruff >=0.4.2",
]
test = [
  "mypy >=0.812",
  "pytest >=6.0",
  "pytest-cov >=2.8",
  "pytest-watch >=4.2",
  "python-magic >=0.4",
  "responses >=0.14",
  "types-requests >=0.1",
  "types-setuptools >=0.1",
  "vcrpy >=6.0.1",
]
docs = [
  "jupyterlab >=3",
  "ipywidgets >=7.7.0",
  "widgetsnbextension >=3.6.0",
  # Prevent install of 1.6.0 because the module mkdocs.tests
  # is no longer exported, which causes mkdocs-jupyter to
  # break with a ModuleNotFoundError.
  # for notebook integrations and documentation examples
  "mkdocs >=1.2,!=1.6.0",
  "mkdocs-material >=7.1,<10.0",
  "mkdocs-redirects >=1.2.1",
  "markdown-callouts >=0.2.0",
  "markdown-include >=0.6",
  "mkdocs-jupyter >=0.19.0",
  "mkdocstrings[python] >=0.19.0",
  "pymdown-extensions >=9.2",
  "pygments >=2.11.1",
  "xarray >=2023.01",
  "matplotlib >=3.3",
  "h5netcdf >=0.11",
  "pyproj >=3.5.0;python<3.12",
  "pyproj >=3.6.1;python>=3.12",
  # The following error occurs when building the docs, so we must explicitly
  # include lxml-html-clean as a dev dependency until mkdocs-jupyter is updated:
  #
  #   ImportError: lxml.html.clean module is now a separate project lxml_html_clean.
  #   Install lxml[html_clean] or lxml_html_clean directly.
  #
  # See https://github.com/danielfrg/mkdocs-jupyter/issues/200
  # See https://github.com/danielfrg/mkdocs-jupyter/issues/197
  "lxml-html-clean >=0.1.1",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
filterwarnings = ["error::UserWarning"]

[tool.mypy]
mypy_path = ["earthaccess", "tests", "stubs"]
disallow_untyped_defs = true
# TODO: incrementally work towards strict mode (currently too many errors)
# strict = true
pretty = true  # Show additional context in error messages
enable_error_code = "redundant-self"

[[tool.mypy.overrides]]
module = [
  "tests.*",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "fsspec.*",
  "dask.*",
  "kerchunk.*",
  "pqdm.*",
  "s3fs",
  "tinynetrc.*",  # TODO: generate stubs for tinynetrc and remove this line
  "vcr.unittest",  # TODO: generate stubs for vcr and remove this line
]
ignore_missing_imports = true

[tool.pyright]
include = ["earthaccess"]
stubPath = "./stubs"

[tool.ruff]
line-length = 88
src = ["earthaccess", "stubs", "tests"]
# HACK: Don't lint or format Jupyter Notebooks for now.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "T20", "D", "G"]
ignore = ["D1", "D205", "D401", "D417", "G004"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.isort]
combine-as-imports = true

[tool.bumpversion]
current_version = "0.10.0"
commit = false
tag = false
regex = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search   = '^version = "{current_version}"$'
replace  = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search   = "^## Unreleased$"
replace  = "## [v{new_version}] {now:%Y-%m-%d}"

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search   = 'version: "{current_version}"'
replace  = 'version: "{new_version}"'

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search   = 'date-released: "\d{{4}}-\d{{2}}-\d{{2}}"'
replace  = 'date-released: "{now:%Y-%m-%d}"'

[tool.codespell]
skip = 'poetry.lock,*.ipynb,*.yml,*.yaml,./tests'
ignore-words = ".codespellignore"
