[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "earthaccess"
version = "0.16.0"
description = "Client library for NASA Earthdata APIs"
authors = [{ name = "earthaccess contributors" }]
maintainers = [
  { name = "Luis Lopez", email = "betolin@gmail.com" },
  { name = "Joseph H. Kennedy", email = "jhkennedy@alaska.edu" },
  { name = "James Bourbeau", email = "james@coiled.io" },
  { name = "Matt Fisher", email = "mfisher87@gmail.com" },
  { name = "Chuck Daniels", email = "chuck@developmentseed.org" },
]
license = "MIT"
readme = "README.md"
classifiers = [
  "Environment :: Console",
  "Framework :: IPython",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.11"

dependencies = [
  "python-cmr >=0.10.0",
  "pqdm >=0.1",
  "requests >=2.26",
  "s3fs >=2025.2",
  "fsspec >=2025.2",
  "tinynetrc >=1.3.1",
  "tenacity >=8.0",
  "multimethod >=1.8",
  "importlib-resources >=6.3.2",
  "typing_extensions >=4.10.0",
]

[project.urls]
Repository = "https://github.com/nsidc/earthaccess"
Documentation = "https://earthaccess.readthedocs.io"
"Bug Tracker" = "https://github.com/nsidc/earthaccess/issues"
Changelog = "https://github.com/nsidc/earthaccess/blob/main/CHANGELOG.md"

[project.optional-dependencies]
kerchunk = [
  "kerchunk>=0.2.9",
  "dask",
  "h5py >=3.14.0",
  "h5netcdf",
  "xarray >=2025.04.0",
  "zarr >=3.1.1",
]
virtualizarr = [
  "numpy >=1.26.4",
  "zarr >=3.1.1",
  "virtualizarr >=2.1.2",
  "kerchunk>=0.2.9",
  "dask",
  "h5py >=3.14.0",
  "obstore >= 0.8.0",
  "fastparquet >= 2023.4.0",
  "numcodecs >= 0.16.2",
  "xarray",
]
dev = [
  "bump-my-version >=0.10.0",
  "nox",
  "pre-commit >=2.4",
  "ruff >=0.6.3",
  "uv >=0.4.7",
]
test = [
  "zarr >=3.1.1",
  "numpy >=1.26.4",
  "mypy >=1.11.2",
  "pytest >=8.3",
  "pytest-cov >=5.0",
  "pytest-watch >=4.2",
  "python-magic >=0.4; platform_system != 'Windows'",
  "python-magic-bin >=0.4; platform_system == 'Windows'",
  "responses >=0.14",
  "types-requests >=0.1",
  "types-setuptools >=0.1",
  "vcrpy >=7.0.0",
  "earthaccess[kerchunk]",
  "earthaccess[virtualizarr]",
  "dask[distributed]>=2025.7.0",
  "xarray",
]
docs = [
  "jupyterlab >=3",
  "ipywidgets >=7.7.0",
  "widgetsnbextension >=3.6.0",
  # Prevent install of 1.6.0 because the module mkdocs.tests
  # is no longer exported, which causes mkdocs-jupyter to
  # break with a ModuleNotFoundError.
  # for notebook integrations and documentation examples
  "mkdocs >=1.2,!=1.6.0",
  "mkdocs-material >=7.1,<10.0",
  "mkdocs-redirects >=1.2.1",
  "markdown-callouts >=0.2.0",
  "markdown-include >=0.6",
  "mkdocs-jupyter >=0.19.0",
  "mkdocs-mermaid2-plugin >=1.2.1",
  "mkdocstrings[python] >=0.19.0",
  "pymdown-extensions >=9.2",
  "pygments >=2.11.1",
  "xarray",
  "matplotlib >=3.3",
  "h5netcdf >=0.11",
  "pyproj >=3.5.0; python_version < '3.12'",
  "pyproj >=3.6.1; python_version >= '3.12'",
  # The following error occurs when building the docs, so we must explicitly
  # include lxml-html-clean as a dev dependency until mkdocs-jupyter is updated:
  #
  #   ImportError: lxml.html.clean module is now a separate project lxml_html_clean.
  #   Install lxml[html_clean] or lxml_html_clean directly.
  #
  # See https://github.com/danielfrg/mkdocs-jupyter/issues/200
  # See https://github.com/danielfrg/mkdocs-jupyter/issues/197
  "lxml-html-clean >=0.1.1",
  "dask>=2024.8.0",
  "earthaccess[virtualizarr]",
  "cftime>=1.6.4",
  "cartopy>=0.24.1",
]


[tool.pytest]
filterwarnings = ["error::UserWarning"]

[tool.mypy]
python_version = "3.11"
files = ["earthaccess", "tests"]
mypy_path = ["earthaccess", "tests", "stubs"]
disallow_untyped_defs = true
# TODO: incrementally work towards strict mode (currently too many errors)
# strict = true
pretty = true                        # Show additional context in error messages
enable_error_code = "redundant-self"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "fsspec.*",
  "h5netcdf.*",
  "dask.*",
  "kerchunk.*",
  "pqdm.*",
  "s3fs",
  "tinynetrc.*",  # TODO: generate stubs for tinynetrc and remove this line
  "vcr.unittest", # TODO: generate stubs for vcr and remove this line
]
ignore_missing_imports = true

[tool.pyright]
include = ["earthaccess"]
stubPath = "./stubs"

[tool.ruff]
line-length = 88
src = ["earthaccess", "stubs", "tests"]

[tool.ruff.lint]
extend-select = ["I", "T20", "D", "G"]
ignore = ["D1", "D205", "D401", "D417", "G004"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# Allow `print` and `pprint` in notebooks
"*.ipynb" = ["T201", "T203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bumpversion]
current_version = "0.16.0"
commit = false
tag = false
regex = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '^version = "{current_version}"$'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
regex = true
search = "^## \\[Unreleased\\]"
replace = "## [Unreleased]\n\n## [v{new_version}] - {now:%Y-%m-%d}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
regex = true
search = "\\[Unreleased\\]: (https://.+?)v{current_version}\\.\\.\\.HEAD"
replace = "[Unreleased]: \\1v{new_version}...HEAD\n[{new_version}]: \\1v{current_version}...v{new_version}"

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = 'version: "{current_version}"'
replace = 'version: "{new_version}"'

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = 'date-released: "\d{{4}}-\d{{2}}-\d{{2}}"'
replace = 'date-released: "{now:%Y-%m-%d}"'

[tool.codespell]
skip = 'uv.lock,*.ipynb,*.yml,*.yaml,./tests'
ignore-words = ".codespellignore"
